namespace _Game.DataStructures
{
    public static class GameConstants
    {
        public const string PlayerPrefsLevel = "LevelNr";
        public const string IdleAnimationTrigger = "Idle";
        public const string RunAnimationTrigger = "Run";
        public const string DanceAnimationTrigger = "Dance";
        public const string FallAnimationTrigger = "Fail";

        public const float FinalPlatformDistance = 1f;
        public const float FirstPlatformOffset = 1.825f;
        public const float PlatformChangeOffset = 0.5f;

    }
}